--- a/react/src/index.css
+++ b/react/src/index.css
@@ -4,6 +4,39 @@
 @tailwind components;
 @tailwind utilities;
 
+.dropDownMenu {
+  position: absolute;
+  top: auto;
+  right: 0%;
+  width: auto;
+  height: min-content;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 50;
+}
+
+.dropDownMenuLista {
+  width: 120px;
+  height: min-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.dropDownMenu::before {
+  content: "";
+  position: absolute;
+  top: -10px;
+  right: 10px;
+  width: 0;
+  height: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-bottom: 10px solid rgba(0, 0, 0, 0.5);
+}
+
 #app {
   height: 100%;
 }
@@ -32,7 +65,6 @@ body {
   height: 50%;
   margin: 0 1rem 0 1rem;
   background-color: #f0f0d8; /* Tailwind's bg-sky-800 */
-  border-radius: 1.5rem;
 }
 
 .swiper-slide {
@@ -40,7 +72,6 @@ body {
   font-size: 18px;
   background: #f0f0d8;
 
-  /* Center slide text vertically */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,7 +82,6 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 1.5rem;
 }
 
 .swiper {
