--- a/react/src/index.css
+++ b/react/src/index.css
@@ -4,7 +4,7 @@
 @tailwind components;
 @tailwind utilities;
 
-.dropDownMenu {
+/*.dropDownMenu {
   position: absolute;
   top: auto;
   right: 0%;
@@ -24,18 +24,7 @@
   flex-direction: column;
   justify-content: center;
 }
-
-.dropDownMenu::before {
-  content: "";
-  position: absolute;
-  top: -10px;
-  right: 10px;
-  width: 0;
-  height: 0;
-  border-left: 10px solid transparent;
-  border-right: 10px solid transparent;
-  border-bottom: 10px solid rgba(0, 0, 0, 0.5);
-}
+*/
 
 #app {
   height: 100%;
