--- a/react/src/index.css
+++ b/react/src/index.css
@@ -8,10 +8,16 @@ html {
   scroll-behavior: smooth;
 }
 
+#app {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
 html,
 body {
   position: relative;
-  min-height: 100%;
+  height: 100%;
 }
 
 body {
