--- a/react/src/index.css
+++ b/react/src/index.css
@@ -55,3 +55,18 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  color: white;
+}
+
+.swiper-pagination-bullet {
+  background-color: white !important;
+  opacity: 0.5 !important;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: white !important;
+  opacity: 1 !important;
+}
